# LibbyRip

./: .gitignore  .pylintrc  CLAUDE.md  Makefile  README.md  bakeMetadata.py  buildChapters.py  convertToM4b.py  easym4b.py  gui.py  libbyrip.py  pyproject.toml
.github/workflows/: pylint.yml  release.yml
